Created folder structure and additional setups

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Daddj",
-  "name": "Daddj - Your Daily Dad Joke",
+  "name": "Daddj - Your Daily Dose of Dad Jokes",
   "icons": [
     {
       "src": "favicon.ico",
